tests/baselines/reference/typeValueConflict1.errors.txt
==== tests/cases/compiler/typeValueConflict1.ts (1 errors) ====
    module M1 {
     export class A {
     }
    }
    module M2 {
     var M1 = 0;
     // Should error.  M1 should bind to the variable, not to the module.
     class B extends M1.A {
                     ~~~~
!!! typeValueConflict1.ts(8,18): error TS2186: Type name 'M1.A' in extends clause does not reference constructor function for 'M1.A'.
     }
    }
    